# sumo_pts

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: requirements.txt
examples/data_postprocess/: tripinfo.out  tripinfo.py
examples/delay_prediction_model/: feature_importance.py  train.py  train_hp.py
examples/generate_dataset/: data_generation.py  input.npy  output.npy
examples/load_city/: load_acchen.py
examples/public_transport_aachen/: aachen.sumocfg  aachen2.sumocfg  aachen_city.sumocfg  acchen.py  osm.bus.trips.xml  osm_pt.rou.xml  osm_stops.add.xml
sumo_pts/: simulation.py
sumo_pts/dummy/: hi.py
sumo_pts/map/: city.py
sumo_pts/output/: tripinfo_reader.py
sumo_pts/scenario/: trips.py
